marked 1.1.7 16 Jan 2015
-----------------
CHANGES

* modified R_HMMlikelihood and loglikelihood to be more useful for computations like in hmmDemo and local_decode

* matrices delta, gamma, and dmat no longer stored in model object unless argument save.matrices=TRUE. They can be computed with compute_matrices. 

NEW FEATURES

* added compute_matrices, local_decode, global_decode, backward_prob, omega functions for HMM manipulations

* added load.model into print.crm so if it is given a file string it will load the external model and then print results.

* added function crmlist_fromfiles which allows you to select a set of .rda files for external models to create a crmlist with a model table.

* added function rerun_crm which will run through a model list and re-run any models that did not converge (convergence !=0). A different method can be specified. If a specific set of models are to be re-run regardless of the convergence criterion then modelnums set to a vector of model numbers in the model list and they are re-run instead of those that did not converge. An initial model can be specified which is useful to rerun a model with a model that is a subset of that model.

marked 1.1.6 29 Aug 2014
-----------------
CHANGES

* Modification to documentation to avoid overflow on pdf

* Patches to crm so design.data and fixed values were handled when the ddl is specified

* cjs and js were patched so only the initial parameter values are stored; it was errantly storing the model when a model was used to specify initial values

* Additional changes to crm to use optimx to work with HMM models.  This required changes to HMMLikelihood argument names which conflicted with optimx.

* cjs and *.tpl files for cjs were modified to use debug; not all exes have been changed yet


marked 1.1.5 16 June 2014
-----------------
NEW FEATURES
