@@ -36,6 +36,7 @@ export(ms2_gamma)
 export(ms_dmat)
 export(ms_gamma)
 export(mvms_design_data)
+export(mvms_dmat)
 export(naive.survival)
 export(omega)
 export(p.boxplot)
