@@ -174,6 +174,43 @@ NULL
 #' }
 NULL
 
+#' Multistrata example data
+#' 
+#' An example data set which appears to be simulated data that accompanies MARK
+#' as an example analysis using the Multistrata model.
+#' 
+#' This is a data set that accompanies program MARK as an example for the
+#' Multistrata model and is also in the RMark pacakge. Here I use it to show the 
+#' 3 ways models can be fitted to multistrata data. The model MSCJS is not run because it
+#' requires ADMB or the exe constructed from ADMB which is not available if downloaded from CRAN.
+#' 
+#' @name mstrata
+#' @docType data
+#' @format A data frame with 255 observations on the following 2 variables.
+#' \describe{ \item{ch}{a character vector containing the encounter history of
+#' each bird with strata} \item{freq}{the number of birds with that capture
+#' history} }
+#' @keywords datasets
+#' @examples
+#'  \donttest{
+#'  data(mstrata)
+#' 	ms1=process.data(mstrata,model="MSCJS",strata.labels=c("A","B","C"))
+#' 	ms2=process.data(mstrata,model="hmmMSCJS",strata.labels=c("A","B","C"))
+#'  # strata.labels for MVMS models must be specified as a list because more than one variable can be used
+#' 	ms3=process.data(mstrata,model="MVMSCJS",strata.labels=list(state=c("A","B","C")))
+#'  ms1.ddl=make.design.data(ms1)
+#'  ms2.ddl=make.design.data(ms2)
+#'  ms3.ddl=make.design.data(ms3)
+#'  \dontrun{
+#' 	mod1=crm(ms1,ms1.ddl,model.parameters=list(Psi=list(formula=~-1+stratum:tostratum),p=list(formula=~time)),hessian=TRUE)
+#'  mod1
+#'  }
+#' 	mod2=crm(ms2,ms2.ddl,model.parameters=list(Psi=list(formula=~-1+stratum:tostratum),p=list(formula=~time)),hessian=TRUE)
+#'  mod2
+#' 	mod3=crm(ms3,ms3.ddl,model.parameters=list(Psi=list(formula=~-1+stratum:tostratum),p=list(formula=~time)),hessian=TRUE)
+#'  mod3
+#' }
+NULL
 
 
 
