@@ -1,10 +1,14 @@
-marked 1.1.7 16 Jan 2015
+marked 1.1.7 3 March 2015
 -----------------
 CHANGES
 
 * modified R_HMMlikelihood and loglikelihood to be more useful for computations like in hmmDemo and local_decode
 
-* matrices delta, gamma, and dmat no longer stored in model object unless argument save.matrices=TRUE. They can be computed with compute_matrices. 
+* matrices delta, gamma, and dmat no longer stored in model object unless argument save.matrices=TRUE. They can be computed with compute_matrices.
+
+* specification of strata.labels is now required for multistate models. Code will no longer use values it finds in capture history. You can specify more strata that are in the data (unobserved strata).
+
+* modified mscjs.r to return standard crm model object rather than admb object.   
 
 NEW FEATURES
 
@@ -15,6 +19,11 @@ NEW FEATURES
 * added function crmlist_fromfiles which allows you to select a set of .rda files for external models to create a crmlist with a model table.
 
 * added function rerun_crm which will run through a model list and re-run any models that did not converge (convergence !=0). A different method can be specified. If a specific set of models are to be re-run regardless of the convergence criterion then modelnums set to a vector of model numbers in the model list and they are re-run instead of those that did not converge. An initial model can be specified which is useful to rerun a model with a model that is a subset of that model.
+
+* added model class mvmscjs 
+
+* added data set mstrata from MARK and examples showing fitted models from hmmmscjs, mscjs and mvmscjs. The mscjs is not run by default because it requires ADMB. Code from help can be copied and pasted.
+
 
 marked 1.1.6 29 Aug 2014
 -----------------
